fix name entry spacing

--- a/main.css
+++ b/main.css
@@ -153,7 +153,7 @@ body {
 	background-color: transparent;
     border: none;
     color: white;
-    width: 65px;
+    width: 80px;
 }
 
 .nameEntry input[type=text]:focus {
